examples/negative/parse_errors/L1/reserved_var.ob
MODULE Reserved;

VAR VAR: INTEGER;

END Reserved.
